--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="50dp"
         android:text="BIGGER NUMBER GAME"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="50dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -24,6 +24,17 @@
         android:paddingRight="10dp"
         android:textSize="25dp"/>
 
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="320dp"
+        android:layout_height="54dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="244dp"
+        android:textAlignment="center"
+        android:paddingTop="15dp"
+        android:textSize="20dp"/>
+
     <Button
         android:layout_width="100dp"
         android:layout_height="wrap_content"
@@ -33,7 +44,8 @@
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
         android:layout_marginTop="324dp"
-        android:id="@+id/Button1"/>
+        android:id="@+id/Button1"
+        android:onClick="leftButton"/>
 
     <Button
         android:id="@+id/Button2"
@@ -44,7 +56,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="69dp"
-        android:layout_marginRight="69dp" />
+        android:layout_marginRight="69dp"
+        android:onClick="rightButton"/>
 
 
 </RelativeLayout>
