--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,18 +60,32 @@
         android:onClick="rightButton"/>
 
     <TextView
+        android:id="@+id/Score"
         android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_alignStart="@+id/Button2"
         android:layout_alignLeft="@+id/Button2"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-19dp"
-        android:layout_marginLeft="-19dp"
-        android:layout_marginBottom="182dp"
-        android:id="@+id/Score"
+        android:layout_marginStart="-21dp"
+        android:layout_marginLeft="-21dp"
+        android:layout_marginBottom="183dp"
         android:text="Score: 0"
         android:textAlignment="center"
-        android:textSize="25dp"/>
+        android:textSize="25dp" />
+
+    <TextView
+        android:id="@+id/Life"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_alignStart="@+id/Button2"
+        android:layout_alignLeft="@+id/Button2"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-175dp"
+        android:layout_marginLeft="-175dp"
+        android:layout_marginBottom="182dp"
+        android:text="Chances: 5"
+        android:textAlignment="center"
+        android:textSize="25dp" />
 
 
 </RelativeLayout>
